--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,4 +17,39 @@
     </main>
 
 
+    <div>
+        <section id="section1">
+            <h1>The world’s #1 way to learn American Sign Language</h1>
+        </section>
+        <div class="section2">
+            <div class="section2-header">
+                <h3>Why you’ll love learning with ASL Lingo</h3>
+            </div>
+            <section id="section2">
+                <div class="column">
+                    <h4>Effective and efficient</h4>
+                    <p>Our courses effectively and efficiently teach reading, listening, and speaking skills. Check out
+                        our
+                        latest research!</p>
+                    <h4>Personalized learning</h4>
+                    <p>Combining the best of AI and language science, lessons are tailored to help you learn at just the
+                        right level and pace.</p>
+                </div>
+                <div class="column centered">
+                    <img src="https://via.placeholder.com/400x400" alt="Filler Image">
+                </div>
+                <div class="column">
+                    <h4>Stay motivated</h4>
+                    <p>We make it easy to form a habit of language learning, with game-like features, fun challenges,
+                        and
+                        reminders from our friendly mascot, Duo the owl.</p>
+                    <h4>Have fun with it!</h4>
+                    <p>Effective learning doesn’t have to be boring! Build your skills each day with engaging exercises
+                        and
+                        playful characters.</p>
+                </div>
+            </section>
+        </div>
+    </div>
+
     <%- include('partials/footer') -%>
