--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,8 @@ body{
   background-image: url(https://d35aaqx5ub95lt.cloudfront.net/images/4986531ca822d48e57b4a18f40ff5172.svg);
   background-color: rgb(35,83,144);
 }
+
+/* Header */
 .text-left{
   margin-top: 11px;
   margin-left: 43px;
@@ -10,6 +12,7 @@ body{
   text-decoration: none;
   color: white;
 }
+/* top-content */
 main{
   margin-top: 180px;
 }
@@ -27,5 +30,65 @@ h1{
   align-items: center;
 }
 .d-flex a:first-of-type{
+  background-color: rgb(88,204,2)
+}
+/* middle-content */
+  /* Style for the first section */
+  #section1 {
+    width: 100%;
+    height: 300px;
+    background-color: white;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #section1 h1{
+    color: black;
+  }
+  
+  /* Style for the second section */
+  #section2 {
+    height: 600px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: row;
+  }
+  .section2-header h3{
+    text-align: center;
+    background-color: white;
+    margin: 0;
+  }
+  /* Style for the columns */
+  .column {
+    flex: 1;
+    padding: 20px;
+  }
+  
+  /* Style for the image */
+  .centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+/* Footer */
+.layout-container{
+  margin: 0 auto;
+  max-width: 1140px;
+  min-height: 70px;
+  text-align: center;
+}
+.footer-header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-header h2{
+  margin-right: 48px;
+  color: white;
+}
+.footer-header a{
+  width: 125px;
   background-color: rgb(88,204,2)
 }
