--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,27 @@
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>   
+<footer>
+    <div class="footer-container">
+        <div class="layout-container">
+            <div class="footer-header">
+                <h2>Learn American Sign Language with ASL Lingo</h2>
+                <a href="/signup" class="btn btn-primary my-3">Get Started</a>
+            </div>
+            <div class="footer-links">
+                <a href="">About Us</a>
+                <a href="">Contact</a>
+                <a href="">Team</a>
+                <a href="">Podcast</a>
+            </div>
+            <div>
+                <span>© Amaury Silverio 2023 All Rights Reserved</span>
+            </div>
+        </div>
+
+    </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
