--- a/views/study.ejs
+++ b/views/study.ejs
@@ -51,30 +51,40 @@
   </div>
 
   <div id="myModalThree" class="modal">
-    <div class="modal-content" id="studyDeckModalContent">
+    <div class="modal-content rounded" id="studyDeckModalContent">
       <span class="close">&times;</span>
-      <ul>
-        <% if(!cards.length){ %>
-          <li class="list-group-item">
-            <h2>Add cards to your deck to begin studying.</h2>
-          </li>
-          <% } %>
-            <% for(var i=0; i<cards.length; i++) {%>
-              <li class="list-group-item">
-                <div class="row">
-                  <div class="col-md-5 frontOfCard">
-                    <img src="lettersFlashCardFront/<%= cards[i].letter %>.png">
-                  </div>
-                  <div class="col-md-5 backOfCard hide">
-                    <img src="lettersFlashCardBack/<%= cards[i].letter %>.png">
-                  </div>
-                  <div class="col-md-2 text-right">
-                    <button class="flip">Answer</button>
-                  </div>
-                </div>
-              </li>
-              <% } %>
-      </ul>
+      <% let cardsArray=[] %>
+        <% let cardsCopy=cards %>
+          <% for (var y=0; y < cards.length; y++) { %>
+            <% cardsArray.push(cardsCopy[y].letter) %>
+              <%} console.log("cardsCopy",cardsCopy)%>
+                <% for (let x=cardsCopy.length - 1; x> 0; x--) { %>
+                  <% const j=Math.floor(Math.random() * (x + 1)); %>
+                    <% [cardsCopy[x], cardsCopy[j]]=[cardsCopy[j], cardsCopy[x]]; %>
+                      <% }console.log(cardsCopy)%>
+                        <ul class="list-group">
+                          <% if (!cards.length) { %>
+                            <li class="list-group-item" style="background-color: #FFDAB9;">
+                              <h2>Add cards to your deck to begin studying.</h2>
+                            </li>
+                            <% } %>
+                              <% for (var i=0; i < cards.length; i++) { %>
+                                <li class="list-group-item cards" style="background-color: #FFEFD5;">
+                                  <div class="row cardFormat">
+                                    <div class="col-md-5 frontOfCard">
+                                      <img src="lettersFlashCardFront/<%= cardsCopy[i].letter %>.png">
+                                    </div>
+                                    <div class="col-md-5 backOfCard hideCard">
+                                      <img src="lettersFlashCardBack/<%= cardsCopy[i].letter %>.png">
+                                    </div>
+                                    <div class="col-md-2 text-right cardFormatButtons">
+                                      <button class="flip btn btn-primary rounded-pill">Answer</button>
+                                      <button class="flip btn btn-primary rounded-pill">Next Card</button>
+                                    </div>
+                                  </div>
+                                </li>
+                                <% } %>
+                        </ul>
     </div>
   </div>
 
