--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -3,41 +3,51 @@
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-lg-10">
-        <h1 class="text-center mb-4">Please enter a single letter below, and we will show you an image demonstrating how
-          to sign it in American Sign Language.</h1>
-        <form action="/learn/createPost" method="POST">
-          <div class="form-group">
-            <input name="letters" class="form-control input" type="text" placeholder="P" required>
-          </div>
-          <div class="form-group">
-            <button class="btn btn-primary btn-block button" type="submit">Submit</button>
-          </div>
-        </form>
+        <h1 class="text-center mb-4">Follow the alphabet learning path by uploading an image of you signing a letter for
+          each step down the path.</h1>
         <hr>
-        <h3 class="text-center">Letter(s) in American Sign Language:</h3>
-        <ul class="list-group">
-          <% for(var i=0; i<letterContainer.length; i++) {%>
+        <h3 class="text-center">Letters in American Sign Language:</h3>
+        <% for(let i=0; i < arrLetters.length; i++){%>
+
+
+
+
+          <ul class="list-group">
+
             <li class="list-group-item">
               <div class="row">
-                <div class="col-md-2">
-                  <span>Letter:</span>
-                  <span>
-                    <%= letterContainer[i].letters %>
-                  </span>
+                <form action="/learn/createPost" enctype="multipart/form-data" method="POST">
+                  <div class="mb-3">
+                    <label for="imgUpload" class="form-label">Add Your Photo Here</label>
+                    <input type="file" class="form-control" id="imageUpload" name="file">
+                    <input value="<%=arrLetters[i]%>" name="letter" hidden>
+                    <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+                  </div>
+                </form>
+                <div class="col-md-6">
+                  <img class="imgSize" src="letters/<%=arrLetters[i]%>.png">
                 </div>
-                <div class="col-md-8">
-                  <img src="letters/<%= letterContainer[i].letters %>.png">
-                </div>
-                <div class="col-md-2 text-right">
-                  <form action="/learn/deletePost/<%= letterContainer[i].id %>?_method=DELETE" method="POST"
-                    class="col-3">
-                    <button class="fa fa-trash" type="submit"></button>
-                  </form>
-                </div>
+                <% for(let x=0; x < letterContainer.length; x++){%>
+                  <%console.log("yo",letterContainer[x])%>
+                    <%if(letterContainer[x].letter===arrLetters[i]){%>
+                      <div class="col-md-4">
+                        <img class="img-fluid" src="<%= letterContainer[x].image%>" />
+                      </div>
+                      <div class="col-md-2 text-right">
+                        <form action="/learn/deletePost/<%= letterContainer[x].id %>?_method=DELETE" method="POST"
+                          class="col-3">
+                          <button class="fa fa-trash" type="submit"></button>
+                        </form>
+                      </div>
+                      <%}%>
+                        <%}%>
               </div>
             </li>
-            <% } %>
-        </ul>
+
+          </ul>
+          <%}%>
+
+
       </div>
     </div>
   </div>
