--- a/views/partials/studyFooter.ejs
+++ b/views/partials/studyFooter.ejs
@@ -14,7 +14,7 @@
 
   </div>
 </footer>
-<script src="js/profile.js" type="text/javascript"></script>
+<script src="js/study.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
