--- a/public/css/liveTranslation.css
+++ b/public/css/liveTranslation.css
@@ -42,3 +42,11 @@
     margin: 0 auto;
     border-radius: 8px;
 }
+
+/* newStyle */
+.translatedText{
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  font-size: 12rem;
+}
