--- a/views/study.ejs
+++ b/views/study.ejs
@@ -134,7 +134,8 @@
               <div class="dropdown-menu deckMenu deckMenuDisappear">
                 <span class="col-3 btn btn-primary dropdown-item study dropdownDisappear"
                   data-deckId="<%=deckContainer[i].id%>">Study</span>
-                <span class="col-3 btn btn-primary dropdown-item addCards dropdownDisappear">Add Cards</span>
+                <span class="col-3 btn btn-primary dropdown-item addCards dropdownDisappear"
+                  data-deckId="<%=deckContainer[i].id%>">Add Cards</span>
                 <!-- <span class="col-3 btn btn-primary dropdown-item deleteCards dropdownDisappear">Delete Cards</span> -->
                 <span class="col-3 btn btn-primary dropdown-item deleteDeck dropdownDisappear"
                   data-deckId="<%=deckContainer[i].id%>">Delete Deck</span>
