--- a/public/css/learn.css
+++ b/public/css/learn.css
@@ -1,8 +1,10 @@
 /* Body */
 body{
-  background-image: url(../imgs/AmauryBG.png);
-  background-repeat: no-repeat;
-  background-size: contain;
+  background: url(../imgs/learnBackground.png) no-repeat; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 /* Header */
@@ -49,7 +51,7 @@ width: 100%;
 }
 .containerStyling{
   padding: 5px;
-
+  justify-content: center;
 }
 img{
   border-radius: 14px;
@@ -57,3 +59,64 @@ img{
 .uploadedImg{
   margin-left: 30px;
 }
+
+/* new styling */
+.image-container{
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+gap: 17px;
+}
+.col-md-6{
+  width: 100%;
+}
+.list-group-item{
+  cursor: pointer;
+}
+
+
+/* items that i have to change once card is clicked */
+/* .imageUploadDiv, .deleteBtnDiv{
+  use js to remove hidden class
+
+} */
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 300px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
