--- a/views/partials/profileHeader.ejs
+++ b/views/partials/profileHeader.ejs
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <header class="container">
+  <header class="container noOverflow">
     <!-- <div class="text-left">
       <h2><a class="logo" href="/profile">ASL Lingo</a></h2>
     </div> -->
