--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,20 +22,25 @@
           </form>
         </div>
         </button>
-        <div class="col-6">
-          <ul class="row list-unstyled">
-            <% for(var i=0; i<posts.length; i++) {%>
-              <li class="col-6 justify-content-between mt-5">
+
+      </div>
+    </div>
+    <div class="container">
+      <ul class="list-unstyled">
+        <div class="horizontal-scroll">
+          <% for(var i=0; i<posts.length; i++) {%>
+            <li class="">
+              <div class="image-container">
                 <a href="/post/<%= posts[i]._id%>">
                   <img class="img-fluid" src="<%= posts[i].image%>">
                 </a>
-              </li>
-              <% } %>
-          </ul>
-          <div class="row justify-content-center mt-5">
-            <a class="btn btn-primary" href="/feed">Return to Feed</a>
-          </div>
+              </div>
+            </li>
+            <% } %>
         </div>
+      </ul>
+      <div class="row justify-content-center mt-5">
+        <a class="btn btn-primary" href="/feed">Return to Feed</a>
       </div>
     </div>
   </div>
